// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarContent matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AvatarContent
    classes={
      Object {
        "capital": "capital",
        "cont": "cont",
        "f": "f",
        "m": "m",
        "wrap": "wrap",
      }
    }
    name="John Doe"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className="cont capital"
          style={Object {}}
        >
          <span>
            J
            D
          </span>
        </div>,
        undefined,
      ],
      "className": "wrap",
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            J
            D
          </span>,
          "className": "cont capital",
          "style": Object {},
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "J",
              "D",
            ],
          },
          "ref": null,
          "rendered": Array [
            "J",
            "D",
          ],
          "type": "span",
        },
        "type": "div",
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className="cont capital"
            style={Object {}}
          >
            <span>
              J
              D
            </span>
          </div>,
          undefined,
        ],
        "className": "wrap",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              J
              D
            </span>,
            "className": "cont capital",
            "style": Object {},
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "J",
                "D",
              ],
            },
            "ref": null,
            "rendered": Array [
              "J",
              "D",
            ],
            "type": "span",
          },
          "type": "div",
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`AvatarContentJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(AvatarContent)
    name="John Doe"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "capital": "AvatarContent-capital-0-1-5",
        "cont": "AvatarContent-cont-0-1-2",
        "f": "AvatarContent-f-0-1-4",
        "m": "AvatarContent-m-0-1-3",
        "wrap": "AvatarContent-wrap-0-1-1",
      },
      "name": "John Doe",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "capital": "AvatarContent-capital-0-1-5",
          "cont": "AvatarContent-cont-0-1-2",
          "f": "AvatarContent-f-0-1-4",
          "m": "AvatarContent-m-0-1-3",
          "wrap": "AvatarContent-wrap-0-1-1",
        },
        "name": "John Doe",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
